# SSCHIP8

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
.cargo/: config
src/: chip8gfx.rs  chip8kb.rs  main.rs  minimalkbinterface.rs  sdlinterface.rs  terminalgfx.rs  terminalinterface.rs  terminalkb.rs  terminalkb.rs.old
