[package]
name = "SSCHIP-8"
version = "0.1.0"
authors = ["JG"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
libc = "0.2.0"
keyboard_query = "0.1.0"
pancurses = "0.16.1"

[build-dependencies]
# bindgen = "0.53.2"
cargo-vcpkg = "0.1.5"
vcpkg = "0.2.13"

[profile.dev]
opt_level = 0
debug = 2
split-debuginfo = "packed"
overflow-checks = false

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["static-link","use-vcpkg"]

[package.metadata.vcpkg]
# dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
# rev = "a0518036077baa4"
branch = "master"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x86-windows-static-md", install = ["sdl2"] }
x86_64-apple-darwin = { install = ["ncurses", "sdl2"] }
x86_64-unknown-linux-gnu = { install = ["ncurses", "sdl2"] }